# flet-webview

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  webview.md
docs/types/: log_level_severity.md  request_method.md  webview_console_message_event.md  webview_javascript_event.md  webview_scroll_event.md
examples/web_view_example/: pyproject.toml
examples/web_view_example/src/: main.py
examples/webview_example/: pyproject.toml
examples/webview_example/src/: main.py
src/flet_web_view/: __init__.py
src/flet_webview/: __init__.py  types.py  webview.py
src/flutter/flet_webview/: pubspec.yaml
src/flutter/flet_webview/lib/src/: webview_mobile_and_mac.dart
