[project]
name = "flet-web-view"
version = "0.1.0"
description = "WebView control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.8"
dependencies = [
    "flet>=0.25.2",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet.dev/docs/controls/webview/"
Repository = "https://github.com/flet-dev/flet-web-view"
Issues = "https://github.com/flet-dev/flet-web-view/issues"

[tool.setuptools.package-data]
"flutter.flet_web_view" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.25.2",
]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
