[project]
name = "flet-webview"
version = "0.2.0"
description = "Display web content in Flet apps using WebView."
readme = "README.md"
authors = [{ name = "Flet contributors", email = "hello@flet.dev" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet-dev.github.io/flet-webview"
Repository = "https://github.com/flet-dev/flet-webview"
Issues = "https://github.com/flet-dev/flet-webview/issues"

[tool.setuptools.package-data]
"flutter.flet_webview" = ["**/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocstrings-python-xref",
    "mike",
    "markdown>=3.6",
    "pymdown-extensions",
    "mkdocs-glightbox",
    "pygments>=2.16",
]

[tool.uv.sources]
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
