[project]
name = "webview_example"
version = "1.0.0"
description = "Flet Webview Example"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet-webview",
    "flet",
]

# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "Flet Webview Example"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-webview = "../.."
flet = "../../../flet/sdk/python/packages/flet"

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
]

[tool.uv.sources]
flet-webview = { path = "../../", editable = true }
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }
