[project]
name = "flet-webview-example"
version = "1.0.0"
description = "flet-webview-example"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet-webview",
    "flet",
]

# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "flet-webview-example"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"
